notes 2.1-st iteration
Правка замечаний + экран добавления/редактирования + ActionBar-кнопки

--- a/Android/Notes/app/src/main/res/values/strings.xml
+++ b/Android/Notes/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Заметки</string>
+    <string name="action_save">Сохранить</string>
+    <string name="action_edit">Редактировать</string>
+    <string name="action_delete">Удалить</string>
+    <string name="text_dialog_save">Сохранить изменения?</string>
+    <string name="text_dialog_delete">Вы действительно хотите удалить заметку?</string>
 </resources>
