notes 2.2-st iteration
Правка замечаний + bottomSheet

--- a/Android/Notes/app/src/main/res/values/strings.xml
+++ b/Android/Notes/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="action_cancel">Отменить</string>
     <string name="text_dialog_save">Сохранить изменения?</string>
     <string name="text_dialog_delete">Удалить заметку?</string>
+    <string name="bottom_sheet_peek">Дополнительно</string>
+    <string name="toast_save_success">Заметка сохранена</string>
+    <string name="toast_delete_success">Замтека удалена</string>
 </resources>
