--- a/Android/Notes/app/src/main/res/values/strings.xml
+++ b/Android/Notes/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Заметки</string>
+    <string name="action_sync">Синхронизация</string>
     <string name="action_save">Сохранить</string>
     <string name="action_edit">Редактировать</string>
     <string name="action_delete">Удалить</string>
@@ -9,4 +10,5 @@
     <string name="bottom_sheet_peek">Дополнительно</string>
     <string name="toast_save_success">Заметка сохранена</string>
     <string name="toast_delete_success">Замтека удалена</string>
+    <string name="network_error">Ошибка при загрузке данных.</string>
 </resources>
